--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
         <h2>Some cute thing</h2>
         <p>12/17</p>
       </div>
-      <img
-        src="https://i.pinimg.com/736x/c0/8b/62/c08b626ec835c66c07ddef435f84c967.jpg"
-        alt="Foto 2">
+      <img src="https://i.pinimg.com/736x/c0/8b/62/c08b626ec835c66c07ddef435f84c967.jpg" alt="Foto 2">
       <div class="feed-footer">
         <p>The internet approves this cute dog...#BreatheCode</p>
       </div>
@@ -43,9 +41,7 @@
         <h2>There´s paparazzi around</h2>
         <p>12/17</p>
       </div>
-      <img
-        src="https://img.europapress.es/fotoweb/fotonoticia_20160820125950_690.jpg"
-        alt="Foto 3">
+      <img src="https://img.europapress.es/fotoweb/fotonoticia_20160820125950_690.jpg" alt="Foto 3">
       <div class="feed-footer">
         <p>This is me waiting for the screen to show my awesome first website made at #BreatheCode</p>
       </div>
@@ -55,8 +51,7 @@
         <h2>And of course… Food! </h2>
         <p>12/17</p>
       </div>
-      <img
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRngGuuAR-mG78BZqtqO6GM8LVaRltan8Ozow&s"
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRngGuuAR-mG78BZqtqO6GM8LVaRltan8Ozow&s"
         alt="Foto 4">
       <div class="feed-footer">
         <p>Because no photo feed is cool without some food on it! #BreatheCode</p>
